# gee-agent-skill

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SKILL.md  TODO.md  pyproject.toml
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md  roadmap_task.md  workflow_request.md
.github/workflows/: ci.yml
agents/: openai.yaml
assets/templates/: hk_district_january_ndvi_smoke.py.j2  hk_january_2024_ndvi_csv.py.j2  landsat_lst.py.j2  sentinel1_flood_before_after.py.j2  sentinel2_index_image.py.j2  sentinel2_ndvi_composite.py.j2  zonal_statistics.py.j2
docs/: agent_goal.md  benchmark_protocol.md  capability_matrix.md  cli_reference.md  closed_loop.md  concepts.md  demo_gallery.md  error_taxonomy.md  extending.md  harness.md  how_to_start.md  live_smoke.md  paper.md  project_board.md  recipes.md  release_readiness.md  remote_sensing_validation.md  research_positioning.md  roadmap.md  tool_permissions.md  trae_skill_guidelines.md  troubleshooting.md  v01_hk_january_ndvi.md  v02_landcover_aware_ndvi.md  v03_hk_2024_16day_ndvi.md
docs/agent_reviews/: 2026-06-21-v0.1-implementation-checklist.md  2026-06-21-v0.1-skill-review.md  2026-06-21-v0.1-source-curation.md  2026-06-21-v0.2-integration-response.md  2026-06-21-v0.3-pdf-reference-integration.md
docs/case_studies/: hk_ndvi_landcover_v02.md  hk_ndvi_v01.md  hk_ndvi_v03.md
docs/examples/: codex_transcript.md
docs/releases/: v0.3.0-alpha.md
docs/reviews/: architecture-reviewer.md  docs-reviewer.md  final-freeze-audit.md  gee-domain-reviewer.md  general-agent-native-gee-release-audit.md  overclaim-audit.md  portfolio-research-positioning-audit.md  rag-engineer.md  runtime-engineer.md  test-engineer.md  v01-live-natural-language-audit.md  v01-mainline-audit.md  v02-cross-agent-review.md  v02-landcover-aware-release-audit.md  v02-mainline-audit.md  v03-alpha-release-audit.md  (+1 more)
evals/: benchmark_suite.yml
schemas/: gee-plan-v0.3.schema.json
scripts/: analyze_gee_corpus.py  discover_gee_repos.py  hk_ndvi_v03_analyze_drive_exports.py  hk_ndvi_v03_export.py  hk_ndvi_v03_make_figures.py  hk_ndvi_v03_monitor_tasks.py  hk_ndvi_v03_readiness_audit.py  ingest_docs.py  sync_dataset_cards.py  sync_recipe_cards.py
tests/: test_ask_v01.py  test_ask_v02_plan.py  test_cli.py  test_corpus_audit_script.py  test_corpus_inventory.py  test_docs_assets.py  test_docs_status_consistency.py  test_evaluation.py  test_execution_boundaries.py  test_hk_ndvi_preflight.py  test_hk_ndvi_v03_metrics_contract.py  test_hk_ndvi_v03_readiness_audit.py  test_hk_ndvi_v03_schema.py  test_hk_ndvi_v03_task_monitor.py  test_live_boundary.py  test_rag.py  test_semantic_and_errors.py  test_templates.py  test_trace_and_registry.py  test_v03_general_harness.py  test_validation.py
(+150 files in other folders)
