[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gee-agent-skill"
version = "0.3.0"
description = "Traceable Google Earth Engine research harness with local RAG, templates, validation, run traces, and CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "gee-agent-skill maintainers" }]
keywords = ["google-earth-engine", "geospatial", "remote-sensing", "agent", "rag", "cli", "codex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "Jinja2>=3.1",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/Fwrog/gee-agent-skill"
Repository = "https://github.com/Fwrog/gee-agent-skill"
Issues = "https://github.com/Fwrog/gee-agent-skill/issues"

[project.optional-dependencies]
earthengine = [
  "earthengine-api>=1.5",
  "geemap>=0.35",
]
validation = [
  "matplotlib>=3.8",
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[project.scripts]
gee-skill = "geeskill.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geeskill = [
  "resources/contexts/*.json",
  "resources/index/*.json",
  "resources/boundaries/*.geojson",
  "resources/tasks/*.yaml",
  "resources/templates/*.j2",
  "resources/templates/recipes/*.j2",
  "resources/recipes/*.yaml",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
